packages/core/src/components/bal-tabs/bal-tabs.sass
@import '@baloise/ds-styles/sass/mixins'
@import './components/tab-nav'
@import './components/tab-button'
@import './components/tab-icon'
@import './components/tab-label'
@import './components/tab-select'
@import './bal-tabs.vars'
@import '../../utils/swiper/swiper'

.bal-tabs
  display: flex
  flex-direction: column
  min-width: 0
  //
  // Fullwidth
  &--fullwidth
    width: 100%
  //
  // Vertical layout
  &--vertical
    gap: var(--bal-space-normal)
    flex-direction: column
    +tablet
      flex-direction: row
  //
  // Navbar layout
  &--navbar
    +tablet
      height: 100%

// Tab Item
// are hidden initialy and only shown when active
// --------------------------------------------------
.bal-tab-item
  width: 100%
  display: none
  &--active
    display: block

// Accordion
// --------------------------------------------------

.bal-tabs--accordion
  .bal-tabs__content
    overflow: hidden

  &.bal-tabs--collapsed .bal-tabs__content
    display: none

// Content
// --------------------------------------------------

.bal-tabs__content
  width: 100%

.bal-tabs__content--vertical
  width: auto
  flex: 1

.bal-tabs__content--hidden
  display: none

// Navbar Context
// --------------------------------------------------

.bal-tabs__nav--full-height,
.bal-tabs__nav__inner--full-height
  height: 100%

// Border
// --------------------------------------------------

.bal-tabs__nav__border
  position: absolute
  background: var(--bal-tabs-tab-nav-border-background)
  border-radius: var(--bal-tabs-tab-nav-border-radius)
  height: var(--bal-border-width-normal)
  left: 1px
  right: 1px
  bottom: 0
  min-width: 100%
  &--hidden
    display: none
  &--vertical
    min-width: var(--bal-border-width-normal)
    max-width: var(--bal-border-width-normal)
    width: var(--bal-border-width-normal)
    height: 100%
    top: 0
    right: auto
  &--inverted
    background: var(--bal-tabs-tab-nav-border-background-inverted)

